[project]
name = "sherlockai-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "sherlock-ai",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
sherlock-ai = { git = "https://github.com/pranawmishra/sherlock-ai.git", rev = "dev" }
